<resources>
    <string name="app_name">I Reserve</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_more">Hello ,</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyAsbNodeylaNTl5UCIRl--s0MuQKtoDIS0</string>
    <string name="home">Home</string>

    <string name="offers">Offers</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="ok">Ok</string>
    <string name="no">Clear</string>
    <string name="noConnection">No internet Connection</string>
    <string name="our_story">Our Story</string>
    <string name="join_us_on">Join Us On</string>
    <string name="location">Location</string>

    <string name="bookings">Bookings</string>
    <string name="contact_us">Contact Us</string>
    <string name="send">Send</string>

    <string name="orderDeleted">The cart has been removed successfully</string>
    <string name="error">Server Error , Please try again</string>
    <string name="book">Book</string>
    <string name="table_for">Table For</string>
    <string name="date_and_time">Date and time</string>
    <string name="government">Governorate</string>
    <string name="area">Area</string>
    <string name="mall">Mall</string>
    <string name="cuisines">Cuisines</string>
    <string name="reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="forget_password">Forget Password</string>
    <string name="search">Search ...</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>

    <string name="dine_in">Dine In</string>
    <string name="curbside">Curbside</string>
    <string name="pickup">Pickup</string>
    <string name="about_the_restaurant">About the Restaurant</string>
    <string name="phone">Phone</string>
    <string name="hours">Hours</string>

    <string name="booking">Booking</string>


    <string name="about">About</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="support">Support</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_order">My Order</string>
    <string name="delete_all">Delete All</string>
    <string name="apply">Apply</string>
    <string name="my_orders">My Orders</string>
    <string name="notifications">Notifications</string>
    <string name="payment">Payment</string>
    <string name="my_profile">My Profile</string>
    <string name="your_status">Your status</string>
    <string name="reservations">Reservations</string>
    <string name="account_details">Account details</string>
    <string name="edit">Edit</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log out</string>
    <string name="i_read_and_agree_to">I read and agree to</string>
    <string name="sign_up">Sign up</string>
    <string name="upcoming">Upcoming</string>
    <string name="write_your_review">Write your review</string>
    <string name="post_review">Post Review</string>
    <string name="cancel">Cancel</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="seating_type">Seating Type</string>
    <string name="receipt">Receipt</string>
    <string name="no_data">No Data To Show</string>
    <string name="order_details">Order Details</string>
    <string name="apply_booking">Apply Booking</string>
    <string name="rating">Rating</string>
    <string name="name">Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="phone_number_or_email_address">Phone number or email address</string>
    <string name="password">Password</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay_with">Pay with</string>
    <string name="cash">Cash</string>
    <string name="payment_summary">Payment summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="services_charge">Services Charge</string>
    <string name="total_ammount">Total ammount</string>
    <string name="proceed_payment">Proceed Payment</string>
    <string name="order_id">Order ID:</string>
    <string name="item">ITEM</string>
    <string name="qty">QTY</string>
    <string name="total">Total</string>
    <string name="unit">UNIT</string>
    <string name="price">PRICE</string>
    <string name="skip">Skip</string>
    <string name="member_since">\"Member since \"</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_50_of_yours_1st_order_with_mastercard">50 % of yours 1st order with MasterCard</string>
    <string name="restaurants">Restaurants</string>
    <string name="you_have_no_reservation_yet">You have no reservation yet!</string>
    <string name="make_rate">Make Rate</string>
    <string name="reserve">Reserve</string>
    <string name="save">Save</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="unfortunately_payment_process_is_unsuccessful">Unfortunately payment process is unsuccessful</string>
    <string name="try_again">Try again</string>
    <string name="delete">Delete</string>
    <string name="_2_19_00_today">2 . 19:00 Today</string>
    <string name="search_btn">Search</string>

    <string name="success_payment">Success Payment</string>
    <string name="thank_you_for_your_payment">Thank you for your payment</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change">Change</string>
    <string name="at">At </string>
    <string name="person">Person</string>
    <string name="price_ada">Price :  </string>
    <string name="date_dots">Date :  </string>
    <string name="re_success">Reordered Successfully</string>
    <string name="re_fail">Reordered Fail</string>
    <string name="for_text">For</string>
    <string name="days_text">Days</string>
    <string name="dine_in_pager">Dine In</string>
    <string name="cur_page">Curbside</string>
    <string name="pic_pager">Pickup</string>
    <string name="menu_pager">Menu</string>
    <string name="reviews_pager">Reviews</string>
    <string name="about_pager">About Us</string>
    <string name="contact_to_cancel">Please contact the restaurant to Cancel your reservation</string>
    <string name="contact_to_edit">Please contact the restaurant to Edit your reservation</string>
    <string name="per_text">Sorry , you must allow this permission to call the restaurant</string>
    <string name="enter_message">Enter your message</string>
    <string name="message_sent">Your message sent successfully</string>
    <string name="add_food_txt">Please add foods to apply</string>
    <string name="no_places">No places available</string>
    <string name="select_count">Select the Count</string>
    <string name="no_fav">No favorites</string>
    <string name="login_success">Login Successfully</string>
    <string name="alert">Alert</string>
    <string name="close_app">Do you want to close the app ?</string>
    <string name="your_rate">Please put your rate stars</string>
    <string name="order_de">Order deleted successfully</string>
    <string name="order_added">Order Added Successfully</string>
    <string name="no_food_add">No foods to apply</string>
    <string name="no_food_delete">No foods to delete</string>
    <string name="select_payment">Please select Payment Method</string>
    <string name="pass_changed">Password Changed Successfully</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="account_created">Account Created Successfully</string>
    <string name="comment">Enter your comment</string>
    <string name="all">All</string>
    <string name="sort_by">Sort by</string>
    <string name="inside">Inside</string>
    <string name="lebanese">Lebanese</string>
    <string name="or_der">Order</string>
    <string name="delete_cart">Your Order full of food from another restaurant, do you want to remove All foods that in the Other Order ?</string>
    <string name="seat_type">Seating Type</string>
    <string name="select_the_time">Select the time of the order</string>
    <string name="confirm">Confirm</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>