<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="16dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ed_passwords"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"
                android:src="@drawable/ic_baseline_close_24"
                android:id="@+id/close"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/close"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ed_style"
                android:hint="@string/name"
                android:layout_marginBottom="15dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:id="@+id/name"
                android:inputType="textPersonName"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/name"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ed_style"
                android:hint="@string/email_address"
                android:layout_marginBottom="15dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/email"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ed_style"
                android:hint="@string/location"
                android:layout_marginBottom="15dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="text"
                />
            <EditText
                android:inputType="phone"
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/location"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ed_style"
                android:hint="@string/phone"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginBottom="15dp"
                />
            <EditText
                android:inputType="text"
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/phone"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ed_style"
                android:hint="@string/gender"
                android:paddingStart="8dp"
                android:clickable="true"
                android:focusable="false"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:paddingEnd="8dp"
                android:layout_marginBottom="15dp"
                />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@+id/ed_passwords"
            android:background="@drawable/btn_style_linear"
            android:text="@string/save"
            android:textSize="16dp"
            android:fontFamily="@font/hn_bold"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>