<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#FFFFFF"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ed_passwords"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/fail"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:id="@+id/imgView"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgView"
                android:textColor="#F80015"
                android:text="@string/payment_failed"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:fontFamily="@font/hn_bold"
                android:textSize="18dp"
                android:id="@+id/txtSuccess"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSuccess"
                android:textColor="#707070"
                android:text="@string/unfortunately_payment_process_is_unsuccessful"
                android:textAlignment="center"
                android:textSize="16dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="150dp"
            android:layout_below="@+id/ed_passwords"
            >
            <Button
                android:id="@+id/btn_tryAgain"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:fontFamily="@font/hn_bold"
                android:background="@drawable/btn_style_linear"
                android:text="@string/try_again"
                android:layout_marginEnd="15dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:fontFamily="@font/hn_bold"
                android:background="@drawable/btn_style_linear"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>