<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="25dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/hn_bold"
                android:text="@string/make_rate"
                android:textAlignment="center"
                android:textColor="#E8343D"
                android:textSize="14dp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtRate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:theme="@style/RatingBar" />

            <LinearLayout
                android:id="@+id/lin_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_apply"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_style_linear"
                    android:fontFamily="@font/hn_bold"

                    android:text="@string/apply"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="21dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/btn_style_linear"
                    android:fontFamily="@font/hn_bold"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="21dp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
