<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#FFFFFF"
    android:layout_height="match_parent">
    <pl.droidsonroids.gif.GifTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_centerInParent="true"
        android:background="@drawable/giphy"
        android:id="@+id/imageView3"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ed_passwords"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/success_new"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:id="@+id/imgView"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgView"
                android:textColor="#3CED43"
                android:text="@string/success_payment"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:fontFamily="@font/hn_bold"
                android:textSize="18dp"
                android:id="@+id/txtSuccess"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSuccess"
                android:textColor="#707070"
                android:text="@string/thank_you_for_your_payment"
                android:textAlignment="center"
                android:textSize="16dp"
                />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_change_pass"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="150dp"
            android:textSize="18dp"
            android:fontFamily="@font/hn_bold"
            android:layout_below="@+id/ed_passwords"
            android:background="@drawable/btn_style_linear"
            android:text="@string/home"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>